fix layout issues

--- a/src/templates/Main/style/Main.module.css
+++ b/src/templates/Main/style/Main.module.css
@@ -23,3 +23,9 @@
     width: 100%;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .playlist {
+    padding-top: 10px;
+  }
+}
